--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,499 @@
+/*    Vars    */
+:root {
+  --color-pirmary: #5ece7b;
+  --color-text: #1d1f22;
+  --color-disabled: #8d8f9a;
+}
+* {
+  font-family: "Raleway";
+  color: var(--color-text);
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #fff;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.no-select {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/*    Navbar.jsx    */
+header {
+  position: relative;
+  background: #fff;
+  z-index: 2;
+}
+header nav.navbar .container {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  min-width: 50px;
+  white-space: nowrap;
+  flex-wrap: nowrap;
+}
+header nav.navbar ul.categories,
+header nav.navbar .nav-actions {
+  flex-basis: 50%;
+}
+/* FIX IT ? */
+header nav.navbar ul.categories li.placeholder {
+  display: flex;
+  padding-right: 16px;
+  padding-left: 16px;
+  align-items: center;
+}
+header nav.navbar ul.categories li.placeholder::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 5px;
+  border-radius: 3px;
+  animation: placeholder-color 1s ease infinite;
+}
+@keyframes placeholder-color {
+  0% {
+    background-color: #f2f2f2;
+  }
+  50% {
+    background-color: #cacaca;
+  }
+  100% {
+    background-color: #f2f2f2;
+  }
+}
+/* FIX IT ? */
+/* for lower screen width , add MediaQuery */
+header nav.navbar ul.categories {
+  list-style-type: none;
+  margin: unset;
+  height: 100%;
+  padding: unset;
+  display: flex;
+  margin-left: 100px;
+}
+header nav.navbar .nav-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  margin-right: 100px;
+}
+header nav.navbar .nav-actions span:hover {
+  cursor: pointer;
+}
+header nav.navbar .nav-actions > span:not(:last-child) {
+  margin-right: 20px;
+}
+header nav.navbar .nav-actions .change-currency .change-currency-button {
+  position: relative;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 160%;
+  padding-right: 18px;
+}
+header nav.navbar .nav-actions .change-currency .change-currency-button::after {
+  position: absolute;
+  content: "";
+  background: url(./images/arrow-down.svg);
+  height: 4px;
+  width: 8px;
+  top: 50%;
+  right: 0;
+  transform: rotateZ(180deg);
+  transition: transform 0.3s ease;
+}
+header
+  nav.navbar
+  .nav-actions
+  .change-currency
+  .dropdown.collapsed
+  .change-currency-button::after {
+  transform: rotateZ(0deg);
+}
+header nav.navbar .nav-actions .change-currency .dropdown ul {
+  list-style-type: none;
+  margin: unset;
+  padding-left: unset;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+header nav.navbar .nav-actions .change-currency .dropdown ul li {
+  padding: 10px 30px 10px 20px;
+  transition: all 0.2s ease;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 160%;
+}
+header nav.navbar .nav-actions .change-currency .dropdown ul li.active,
+header
+  nav.navbar
+  .nav-actions
+  .change-currency
+  .dropdown
+  ul:hover
+  li.active:hover {
+  color: #fff;
+  background-color: var(--color-pirmary);
+}
+header nav.navbar .nav-actions .change-currency .dropdown ul:hover li.active {
+  color: var(--color-text);
+  background-color: #fff;
+}
+header nav.navbar .nav-actions .change-currency .dropdown ul li:hover {
+  color: #fff;
+  background-color: var(--color-pirmary);
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown-content {
+  display: block;
+  position: absolute;
+  background-color: #fff;
+  /* min-width: 160px; */
+  /* padding: 12px 16px; */
+  z-index: 1;
+}
+.change-currency .dropdown-content {
+  box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+}
+.dropdown-content.right {
+  right: 0;
+}
+.dropdown.collapsed .dropdown-content {
+  display: none;
+}
+header nav.navbar .nav-actions span.mini-cart-button {
+  display: flex;
+  justify-self: center;
+  cursor: pointer;
+}
+header nav.navbar .nav-actions .mini-cart {
+  display: flex;
+  justify-self: center;
+}
+header nav.navbar .nav-actions .mini-cart .dropdown {
+  cursor: default;
+}
+.dropdown-back-drop {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background: rgba(57, 55, 72, 0.22);
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+header nav.navbar .nav-actions .mini-cart .dropdown-content {
+  background: #fff;
+  top: 49px;
+  width: 325px;
+  max-height: 540px;
+  overflow: auto;
+  padding: 8px 16px;
+}
+header nav.navbar .nav-actions .mini-cart .dropdown-content .header span {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 160%;
+  font-weight: 500;
+  color: var(--color-text);
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .header
+  span:first-child {
+  font-weight: 700;
+}
+/*
+  since i didn't know that the link should be the hole <li> or just the text i do it this way so it contains all the <li> block.
+  if we only needed <a> to be clickable (not hole block) this part would be diferent, instead of giving padding and flex prop to "a" here...
+  we could've giving it to "li" and for the green underline we could use ::before or ::after with position absolute (note that li should have pos relative),
+  */
+header nav.navbar ul.categories li a {
+  max-height: 80px;
+  height: 100%;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  text-transform: uppercase;
+  color: #000;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-bottom: 2px solid transparent;
+  box-sizing: border-box;
+}
+header nav.navbar ul.categories li:hover a,
+header nav.navbar ul.categories li.active a {
+  font-weight: 600;
+  color: var(--color-pirmary);
+  border-bottom: 2px solid var(--color-pirmary);
+}
+/*    Products    */
+main {
+  margin: 80px 100px;
+}
+main h2.title {
+  margin-bottom: 100px;
+  text-transform: lowercase;
+  font-size: 42px;
+  font-weight: 400;
+}
+main h2.title:first-letter {
+  text-transform: capitalize;
+}
+.products-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 100px 50px;
+  justify-content: space-evenly;
+}
+.products-container .product {
+  width: 350px;
+  padding: 16px;
+  background-color: #fff;
+  position: relative;
+  transition: all 0.3s ease;
+}
+.products-container .product:hover {
+  box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
+}
+.products-container .product.out-of-stock * {
+  color: var(--color-disabled) !important;
+}
+.products-container .product a {
+  text-decoration: unset;
+}
+.products-container .product .add-to-cart-btn {
+  background-color: var(--color-pirmary);
+  border-radius: 50%;
+  padding: 16px;
+  display: flex;
+  position: absolute;
+  top: 330px;
+  right: 30px;
+  transition: all 0.3s ease;
+  transform: scale(0);
+  visibility: hidden;
+  z-index: 1;
+}
+.products-container .product:hover .add-to-cart-btn {
+  transform: scale(1);
+  visibility: visible;
+}
+.products-container .product:hover .add-to-cart-btn:hover {
+  cursor: pointer;
+  box-shadow: 0px 4px 10px rgba(168, 172, 176, 1);
+}
+.products-container .product .add-to-cart-btn svg {
+  width: 24px;
+  height: 24px;
+}
+.products-container .product .add-to-cart-btn svg path {
+  fill: #fff;
+}
+.products-container .product .product-img {
+  width: 100%;
+  height: 340px;
+  margin-bottom: 25px;
+  position: relative;
+}
+.products-container .product .product-img img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+.products-container .product.out-of-stock .product-img .out-of-stock-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(256, 256, 256, 0.5);
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 160%;
+}
+.products-container .product .product-details {
+  display: flex;
+  flex-direction: column;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 160%;
+  color: var(--color-text);
+}
+.products-container .product .product-details .product-price {
+  font-weight: 600;
+  /* in the Design its 500 but 600 is more like it, idk why! it's the same font.*/
+}
+/*    Product    */
+.product-container {
+  display: grid;
+  grid-template-columns: 700px 300px;
+  gap: 100px 70px;
+  justify-content: center;
+}
+.product-container .product-gallery {
+  display: flex;
+}
+.product-container .product-gallery .thumbnails {
+  margin-right: 40px;
+  /* IDK if it's ok to do this or not, long description won't look good  with this design
+    Also for showing scroll bar we need to change sizing because its covering the thumbnails :X
+  */
+  /* overflow-y: auto;
+  max-height: 300px; */
+}
+.product-container .product-gallery .thumbnails .thumbnail {
+  width: 80px;
+  height: 80px;
+  background: #fff;
+  cursor: pointer;
+}
+.product-container .product-gallery .thumbnails .thumbnail:not(:last-child) {
+  margin-bottom: 40px;
+}
+.product-container .product-gallery .thumbnails .thumbnail img,
+.product-container .product-img img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+.product-container .product-img {
+  width: 100%;
+  height: 500px;
+  background: #fff;
+}
+.product-container .product-content .product-brand {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 27px;
+  display: block;
+  margin-bottom: 15px;
+}
+.product-container .product-content .product-name {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 27px;
+  display: block;
+  margin-bottom: 40px;
+}
+.product-container .product-attributes {
+  margin-bottom: 40px;
+}
+.product-container .product-attribute {
+  margin-bottom: 20px;
+}
+.product-container .product-attribute .attribute-title {
+  display: block;
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+.product-container .product-attribute.text-attribute .attribute-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.product-container .product-attribute.swatch-attribute .attribute-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+.product-container .product-attribute .attribute-items .attribute-item {
+  cursor: pointer;
+  font-family: "Source Sans Pro";
+  border: 1px solid var(--color-text);
+  box-sizing: border-box;
+  width: 63px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.05em;
+  transition: all 0.3s ease;
+}
+.product-container
+  .product-attribute.swatch-attribute
+  .attribute-items
+  .attribute-item {
+  width: 40px;
+}
+.product-container
+  .product-attribute.text-attribute
+  .attribute-items
+  .attribute-item.selected {
+  background-color: var(--color-text);
+  color: #fff;
+}
+.product-container
+  .product-attribute.swatch-attribute
+  .attribute-items
+  .attribute-item.selected {
+  border-radius: 50%;
+}
+.product-container .product-price {
+  margin-bottom: 25px;
+}
+.product-container .product-price .title {
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  display: block;
+  margin-bottom: 15px;
+}
+.product-container .product-price .amount {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 18px;
+}
+.product-container .add-to-cart {
+  align-items: center;
+  padding: 16px 32px;
+  width: 100%;
+  background: var(--color-pirmary);
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+  color: #fff;
+  box-sizing: border-box;
+  margin-bottom: 40px;
+}
+.product-container .product-description {
+  /* IDK if it's ok to do this or not, long description won't look good  with this design*/
+  /* overflow-y: auto;
+  max-height: 300px; */
+}
+.product-container .product-description * {
+  font-family: "Roboto";
+}
+.product-container .product-description {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 16px;
 }
