--- a/src/index.css
+++ b/src/index.css
@@ -196,6 +196,9 @@ header nav.navbar .nav-actions .mini-cart .dropdown-content {
   overflow: auto;
   padding: 8px 16px;
 }
+header nav.navbar .nav-actions .mini-cart .dropdown-content .header {
+  margin-bottom: 25px;
+}
 header nav.navbar .nav-actions .mini-cart .dropdown-content .header span {
   font-weight: 700;
   font-size: 16px;
@@ -211,6 +214,96 @@ header
   .header
   span:first-child {
   font-weight: 700;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item {
+  display: flex;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .product-title {
+  margin-right: auto;
+  font-family: "Raleway";
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 160%;
+  white-space: break-spaces;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .control-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .control-buttons
+  button {
+  width: 24px;
+  height: 24px;
+  border: 1px solid #1d1f22;
+  box-sizing: border-box;
+  background: transparent;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .control-buttons
+  button
+  svg {
+  vertical-align: middle;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .product-title
+  span {
+  display: block;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  img {
+  object-fit: cover;
+  object-position: center;
+  width: 110px;
+  height: 140px;
 }
 /*
   since i didn't know that the link should be the hole <li> or just the text i do it this way so it contains all the <li> block.
