--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,21 @@ header nav.navbar .nav-actions span.mini-cart-button {
   justify-self: center;
   cursor: pointer;
 }
+header nav.navbar .nav-actions span.mini-cart-button .badge {
+  position: absolute;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  background: var(--color-text);
+  color: #fff;
+  border-radius: 50%;
+  padding: 5px;
+  top: -15px;
+  right: -15px;
+}
 header nav.navbar .nav-actions .mini-cart {
   display: flex;
   justify-self: center;
@@ -240,6 +255,9 @@ header
   font-size: 16px;
   line-height: 160%;
   white-space: break-spaces;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header
@@ -377,7 +395,7 @@ header
   button {
   width: 24px;
   height: 24px;
-  border: 1px solid #1d1f22;
+  border: 1px solid var(--color-text);
   box-sizing: border-box;
   background: transparent;
 }
@@ -392,6 +410,32 @@ header
   button
   svg {
   vertical-align: middle;
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .control-buttons
+  button:hover {
+  cursor: pointer;
+  color: #fff;
+  background: var(--color-text);
+}
+header
+  nav.navbar
+  .nav-actions
+  .mini-cart
+  .dropdown-content
+  .mini-cart-items
+  .item
+  .control-buttons
+  button:hover
+  svg
+  path {
+  stroke: #fff;
 }
 header
   nav.navbar
