--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,138 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+/*copy out*/
+/*    Modal    */
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  background: rgba(57, 55, 72, 0.22);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal .modal-content {
+  background-color: #fff;
+  width: 300px;
+  max-height: 500px;
+  overflow: auto;
+  padding: 10px;
+}
+.modal .modal-content span.close-btn {
+  display: block;
+  text-align: right;
+  margin-bottom: 8px;
+}
+.modal .modal-content span.close-btn svg {
+  height: 20px;
+  width: 20px;
+  transform: rotateZ(45deg);
+  cursor: pointer;
+}
+.modal .modal-content .product-attributes {
+  margin-bottom: 40px;
+}
+.modal .modal-content .product-attribute {
+  margin-bottom: 20px;
+}
+.modal .modal-content .product-attribute .attribute-title {
+  display: block;
+  font-family: "Roboto Condensed";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 18px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+.modal .modal-content .product-attribute .attribute-title.warrning-blinking {
+  color: red;
+  animation: infinite 0.6s linear blinking;
+}
+@keyframes blinking {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.modal .modal-content .product-attribute.text-attribute .attribute-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.modal .modal-content .product-attribute.swatch-attribute .attribute-items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+.modal .modal-content .product-attribute .attribute-items .attribute-item {
+  cursor: pointer;
+  font-family: "Source Sans Pro";
+  border: 1px solid var(--color-text);
+  box-sizing: border-box;
+  width: 63px;
+  height: 40px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.05em;
+  transition: all 0.3s ease;
+}
+.modal
+  .modal-content
+  .product-attribute.swatch-attribute
+  .attribute-items
+  .attribute-item {
+  width: 40px;
+}
+.modal
+  .modal-content
+  .product-attribute.text-attribute
+  .attribute-items
+  .attribute-item.selected {
+  background-color: var(--color-text);
+  color: #fff;
+}
+.modal
+  .modal-content
+  .product-attribute.swatch-attribute
+  .attribute-items
+  .attribute-item.selected {
+  border-radius: 50%;
+}
+.modal .modal-content button.add-to-cart {
+  cursor: pointer;
+  align-items: center;
+  padding: 16px 32px;
+  width: 100%;
+  background: var(--color-pirmary);
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+  color: #fff;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+}
+.modal .modal-content button.add-to-cart:hover {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
+/*copy out*/
+
 /*    Navbar.jsx    */
 header {
   position: relative;
@@ -81,9 +213,8 @@ header nav.navbar .nav-actions {
   align-items: center;
   margin-right: 100px;
 }
-header nav.navbar .nav-actions,
-.mini-cart-button header nav.navbar .nav-actions,
-.change-currency-button {
+header nav.navbar .nav-actions .mini-cart-button,
+header nav.navbar .nav-actions .change-currency-button {
   cursor: pointer;
 }
 header nav.navbar .nav-actions > span:not(:last-child) {
@@ -640,6 +771,7 @@ main h2.title:first-letter {
 }
 .products-container .product .add-to-cart-btn {
   background-color: var(--color-pirmary);
+  border: none;
   border-radius: 50%;
   padding: 16px;
   display: flex;
