Updates +Sanitizing input of dangerouslySetInnerHTML with DOMPurify. +All functional components were removed. (excluding Route render prop) +Fixed header navigations which were acting wierdly. They're now siwtch category and show all products that are in the category. +Converted GetSpecificProduct to GetSpecificProducts. now it receive array of IDs as param and combine all queries into one query and fetch the needed data.

--- a/src/index.css
+++ b/src/index.css
@@ -632,7 +632,7 @@ header nav.navbar ul.categories li a {
   box-sizing: border-box;
 }
 header nav.navbar ul.categories li:hover a,
-header nav.navbar ul.categories li.active a {
+header nav.navbar ul.categories li a.active {
   font-weight: 600;
   color: var(--color-pirmary);
   border-bottom: 2px solid var(--color-pirmary);
